# comunicacao_serial

./: CMakeLists.txt  LICENSE  README.md  main.c
drivers/: buttons.c  buttons.h  diagram.json  display.c  display.h  font.c  font.h  neopixel.c  neopixel.h  rgb_led.c  rgb_led.h  ssd1306.c  ssd1306.h  ws2812.c  ws2812.h
